--- a/css/estilo.css
+++ b/css/estilo.css
@@ -146,9 +146,12 @@ a{
 }
 
 /* navegação do catálago de livros */
+#catalago-livros{
+    width: 181px;
+    float: left;
+}
 .titulo{
     margin-top: 0;
-    width: 181px;
     background: #ede9e9;
 }
 .marcador{
@@ -176,4 +179,41 @@ a{
 
 .nav-catalago li a:hover{
     color: #ffb74e;
+}
+
+/*** conteúdo principal ***/
+#principal{
+    width: 597px;
+    margin-left: 11px;
+    float: left;
+}
+
+#principal .ultimos-lancamentos{
+    width: 597;
+    height: 30px;
+    border: 2px solid #f1f1f1;
+    border-radius: 10px;
+}
+
+#principal .ultimos-lancamentos p{
+    font-weight: bold;
+    text-transform: uppercase;
+    margin-left: 8px;
+    color: #ff6600;
+    line-height: 30px;
+}
+
+/*** conteúdo da lateral ***/
+#lateral{
+    width: 181px;
+    margin-left: 11px;
+    float: left;
+}
+
+#lateral .atria{
+    margin-top: 5px;
+}
+
+#lateral .banners{
+    margin-top: 5px;
 }
