--- a/css/estilo.css
+++ b/css/estilo.css
@@ -189,7 +189,7 @@ a{
 }
 
 #principal .ultimos-lancamentos{
-    width: 597;
+    width: 595px;
     height: 30px;
     border: 2px solid #f1f1f1;
     border-radius: 10px;
@@ -203,25 +203,46 @@ a{
     line-height: 30px;
 }
 
+/*formatando capa, preço, botão, título e autor*/
+#principal .livro{
+    width: 298px;
+    float: left;
+}
+
 #principal .livro .capa-livro{
     width: 132px;
+    float: left;
 }
 
 #principal .livro .preco-livro{
+    margin-left: 8px;
+    margin-top: 62px;
     font-family: Tahoma, sans-serif;
     font-weight: bold;
     color: #ff0000;
+    float: left;
+}
+
+#principal .livro .btn-detalhes{
+    margin-top: 22px;
+    margin-left: 6px;
 }
 
 #principal .livro .titulo-livro{
+    clear: both;
     font-family: Tahoma, sans-serif;
     font-weight: bold;
-    font-size: 0.8em;
+    font-size: 0.9em;
 }
 
 #principal .livro .autor{
-    font-size: 0.75em;
+    font-size: 0.8em;
     color: #66667d;
+}
+
+/*primeira sub-seção*/
+.primeira-sub{
+    margin-top: 48px;
 }
 
 /*** conteúdo da lateral ***/
@@ -249,6 +270,8 @@ a{
 }
 
 /*** conteúdos do rodapé ***/
+
+
 .rodape-aviso{
     height: 77px;
     background: #f0f0f0;
@@ -322,7 +345,7 @@ a{
 .rodape-base p{
     float: left;
     margin-left: 281px;
-    margin-top: -92px;
+    margin-top: -80px;
 }
 
 .rodape-base .negrito{
